# x2go-plasmoid

./: CMakeLists.txt  update-translations.sh
package/: metadata.desktop
package/contents/ui/: main.qml
plugin/: x2go-plasmoid-plugin.cpp
po/: en_GB.po  template.pot
